--- a/web/pages/login.html
+++ b/web/pages/login.html
@@ -8,7 +8,7 @@
 <div class="container">
     <h1>Welcome to the BattleShip game!</h1>
     <br/>
-    <h2>Please enter a unique user name:</h2>
+    <h2>Login:</h2>
     <form method="GET" action="login">
         <input type="text" name="username" class=""/>
         <input type="submit" value="login"/>
