--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
 <div>
-    <a id="startButton" href="pages/login.html" class="btn active" role="button">Start Some Facacta!</a>
+
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Battleship Game</h1>
+            <h3>The most exciting game now online!</h3>
+        </div>
+        <div>
+            <a id="startButton" href="pages/login.html" class="btn active" role="button">Start Playing</a>
+        </div>
+    </div>
 </div>
+
+<script src="scripts/login.js"></script>
 </body>
 </html>
