--- a/web/pages/welcome.html
+++ b/web/pages/welcome.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../common/bootstrap.min.css">
+    <link rel="stylesheet" href="../styles/welcome.css">
     <meta charset="UTF-8">
     <title>Welcome!</title>
 </head>
 <body>
+
+<div class="container">
+    <div class="jumbotron">
+        <h1>Battleship Game</h1>
+        <h3>The most exciting game now online!</h3>
+    </div>
+    <div class="row">
+        <div class="col-lg-4">
+            <h3>Online Games:</h3>
+            <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action">Game 1</button>
+                <button type="button" class="list-group-item list-group-item-action">Game 2</button>
+                <button type="button" class="list-group-item list-group-item-action">Game 3</button>
+                <button type="button" class="list-group-item list-group-item-action">Game 4</button>
+                <button type="button" class="list-group-item list-group-item-action">Game 5</button>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+        </div>
+
+        <div class="col-lg-4">
+            <h3>Online Players:</h3>
+            <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action">Player 1</button>
+                <button type="button" class="list-group-item list-group-item-action">Player 2</button>
+                <button type="button" class="list-group-item list-group-item-action">Player 3</button>
+                <button type="button" class="list-group-item list-group-item-action">Player 4</button>
+                <button type="button" class="list-group-item list-group-item-action">Player 5</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
