--- a/web/pages/welcome.html
+++ b/web/pages/welcome.html
@@ -23,6 +23,7 @@
                 <button type="button" class="list-group-item list-group-item-action">Game 4</button>
                 <button type="button" class="list-group-item list-group-item-action">Game 5</button>
             </div>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Join Game</button>
         </div>
 
         <div class="col-lg-4">
@@ -37,6 +38,7 @@
                 <button type="button" class="list-group-item list-group-item-action">Player 4</button>
                 <button type="button" class="list-group-item list-group-item-action">Player 5</button>
             </div>
+            <button type="button" class="btn btn-secondary btn-lg btn-block" id="btn-logout">Logout</button>
         </div>
     </div>
 </div>
