--- a/web/pages/welcome.html
+++ b/web/pages/welcome.html
@@ -27,6 +27,7 @@
         </div>
 
         <div class="col-lg-4">
+            <img src="../images/battleship-cover.jpg" class="img-thumbnail" id="img-battleship">
         </div>
 
         <div class="col-lg-4">
