--- a/web/pages/welcome.html
+++ b/web/pages/welcome.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../common/bootstrap.min.css">
+    <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/welcome.css">
     <meta charset="UTF-8">
     <title>Welcome!</title>
