--- a/web/pages/welcome.html
+++ b/web/pages/welcome.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="jumbotron">
         <h1>Battleship Game</h1>
-        <h3>The most exciting game now online!</h3>
+        <h3>Blow up the net!</h3>
     </div>
     <div class="row">
         <div class="col-lg-4">
@@ -41,6 +41,12 @@
                 <button type="button" class="list-group-item list-group-item-action">Player 5</button>
             </div>
             <button type="button" class="btn btn-secondary btn-lg btn-block" id="btn-logout">Logout</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <h2 id="hdl-uploadgame">Upload Your Game</h2>
         </div>
     </div>
 </div>
