Users list get updated

--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="../common/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/welcome.css">
+    <link rel="stylesheet" href="../styles/lobby.css">
     <meta charset="UTF-8">
     <title>Welcome!</title>
 
@@ -22,7 +22,6 @@
             <h3>Online Games:</h3>
             <div class="list-group">
                 <div id="games-list"></div>
-                <button type="button" class="list-group-item list-group-item-action">Game 1</button>
             </div>
             <button type="button" class="btn btn-primary btn-lg btn-block">Join Game</button>
         </div>
