--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
         <div class="col-lg-4">
-            <h3>Online Games:</h3>
+            <h3 class="hdl-scondary">Active Rooms:</h3>
             <div class="list-group">
                 <div id="games-list"></div>
             </div>
@@ -31,7 +31,7 @@
         </div>
 
         <div class="col-lg-4">
-            <h3>Online Players:</h3>
+            <h3 class="hdl-scondary">Online Players:</h3>
             <div class="list-group">
                 <div id="users-list"></div>
             </div>
@@ -42,6 +42,27 @@
     <div class="row">
         <div class="col-lg-12">
             <h2 id="hdl-uploadgame">Upload Your Game</h2>
+
+            <form method="POST" action="#" enctype="multipart/form-data">
+                <!-- COMPONENT START -->
+                <div class="form-group">
+                    <div class="input-group input-file" name="Fichier1">
+			<span class="input-group-btn">
+        		<button class="btn btn-default btn-choose" type="button">Choose</button>
+    		</span>
+                        <input type="text" class="form-control" placeholder='Choose a game XML file...'/>
+                        <span class="input-group-btn">
+       			 <button class="btn btn-warning btn-reset" type="button">Reset</button>
+    		</span>
+                    </div>
+                </div>
+                <!-- COMPONENT END -->
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary pull-right" disabled>Submit</button>
+                </div>
+            </form>
+
+
         </div>
     </div>
 </div>
