--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -46,6 +46,7 @@
             <form method="POST" action="#" enctype="multipart/form-data">
                 <!-- Upload file START -->
                 <div class="form-group">
+                    <input type="text" class="input-group form-control" id="game-title" placeholder='Game Title'/>
                     <div class="input-group input-file" name="Fichier1">
 			<span class="input-group-btn">
         		<button class="btn btn-default btn-choose" type="button">Choose</button>
@@ -59,18 +60,20 @@
 
                 <div class="form-group">
                     <div class="row">
-                        <div class="col-lg-4"></div>
-                        <div class="col-lg-4">
+                        <div class="col-xs-4"></div>
+                        <div class="col-xs-4">
                             <button type="submit" class="btn btn-primary pull-right" id="btn-upload">Upload
                             </button>
                         </div>
-                        <div class="col-lg-4"></div>
+                        <div class="col-xs-4"></div>
                     </div>
                 </div>
             </form>
             <!-- Upload File END -->
         </div>
     </div>
+
+    <div id="footer">All rights reserved to Barak Marziano & Tal Zamir - The Academic of College Tel-Aviv Yaffo</div>
 </div>
 
 </body>
