--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -9,6 +9,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/Lobby.js"></script>
+    <script type="text/javascript" src="js/Logout.js"></script>
 </head>
 <body>
 
@@ -35,7 +36,8 @@
             <div class="list-group">
                 <div id="users-list"></div>
             </div>
-            <button type="button" class="btn btn-secondary btn-lg btn-block" id="btn-logout">Logout</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block" id="btn-logout" onclick="logout()">Logout
+            </button>
         </div>
     </div>
 
