--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,10 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="pages/js/Login.js"></script>
+
+    <script>
+        checkCookie();
+    </script>
 </head>
 <body>
 
