--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -53,7 +53,8 @@
 			<span class="input-group-btn">
         		<button class="btn btn-default btn-choose" type="button">Choose</button>
     		</span>
-                        <input type="text" class="form-control" placeholder='Choose a game XML file...'/>
+                        <input type="text" class="form-control" placeholder='Choose a game XML file...'
+                               id="uploaded-file"/>
                         <span class="input-group-btn">
        			 <button class="btn btn-warning btn-reset" type="button">Reset</button>
     		</span>
@@ -64,7 +65,8 @@
                     <div class="row">
                         <div class="col-xs-4"></div>
                         <div class="col-xs-4">
-                            <button type="submit" class="btn btn-primary pull-right" id="btn-upload">Upload
+                            <button type="submit" class="btn btn-primary pull-right" id="btn-upload"
+                                    onclick="formUploadSubmit()">Upload
                             </button>
                         </div>
                         <div class="col-xs-4"></div>
