--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -44,36 +44,29 @@
     <div class="row">
         <div class="col-lg-12">
             <h2 id="hdl-uploadgame">Upload Your Game</h2>
+            <div>
+                <form action="" method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <div>
+                            <input type="text" class="input-group form-control" id="game-title"
+                                   placeholder='Game Title'/>
+                            <input type="file" class="form-control" name="uploaded-file" id="uploaded-file"
+                                   placeholder='Choose a game XML file...'/>
+                            <div class="row">
+                                <div class="col-xs-4"></div>
+                                <div class="col-xs-4">
+                                    <input type="submit" class="form-control btn btn-primary btn-lg btn-block"
+                                           id="btn-upload"
+                                           value="Upload"
+                                           onclick="uploadFile()"/>
+                                </div>
+                                <div class="col-xs-4"></div>
 
-            <form method="POST" action="#" enctype="multipart/form-data">
-                <!-- Upload file START -->
-                <div class="form-group">
-                    <input type="text" class="input-group form-control" id="game-title" placeholder='Game Title'/>
-                    <div class="input-group input-file" name="Fichier1">
-			<span class="input-group-btn">
-        		<button class="btn btn-default btn-choose" type="button">Choose</button>
-    		</span>
-                        <input type="text" class="form-control" placeholder='Choose a game XML file...'
-                               id="uploaded-file"/>
-                        <span class="input-group-btn">
-       			 <button class="btn btn-warning btn-reset" type="button">Reset</button>
-    		</span>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-xs-4"></div>
-                        <div class="col-xs-4">
-                            <button type="submit" class="btn btn-primary pull-right" id="btn-upload"
-                                    onclick="formUploadSubmit()">Upload
-                            </button>
+                            </div>
                         </div>
-                        <div class="col-xs-4"></div>
                     </div>
-                </div>
-            </form>
-            <!-- Upload File END -->
+                </form>
+            </div>
         </div>
     </div>
 
