--- a/web/pages/game.html
+++ b/web/pages/game.html
@@ -14,17 +14,105 @@
         <h1>Battleship Game</h1>
         <h3>Blow up the net!</h3>
     </div>
-    <div id="tracking" class="col-lg-6">
-        <button class="btn btn-sq-sm btn-board">
-            O
-        </button>
-    </div>
+    <table id="tracking" class="col-lg-6" style="width: auto">
+        <tr class="row-sm">
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
 
-    <div id="personal" class="col-lg-6">
-        <button class="btn btn-sq-sm btn-board">
-            O
-        </button>
-    </div>
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+
+            </th>
+        </tr>
+        <tr>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+        </tr>
+    </table>
+
+    <table id="personal" class="col-lg-6" style="width: auto">
+        <tr class="row-sm">
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+
+            </th>
+        </tr>
+        <tr>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+
+            </th>
+            <th class="column-sm">
+                <button class="btn btn-sq-sm btn-board">
+                    O
+                </button>
+            </th>
+        </tr>
+    </table>
 </div>
 
 
