--- a/web/pages/game.html
+++ b/web/pages/game.html
@@ -14,108 +14,112 @@
         <h1>Battleship Game</h1>
         <h3>Blow up the net!</h3>
     </div>
-    <table id="tracking" class="col-lg-6" style="width: auto">
-        <tr class="row-sm">
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
+    <div class="btn-group-lg" role="group">
+        <button type="button" class="btn btn-secondary btn-primary">Start Game</button>
+        <button type="button" class="btn btn-secondary btn-primary">Drag a Mine</button>
+        <button type="button" class="btn btn-secondary btn-danger">Quit Match</button>
+    </div>
+    <!--<table id="tracking" class="col-lg-6" style="width: auto">-->
+    <!--<tr class="row-sm">-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
 
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
 
-            </th>
-        </tr>
-        <tr>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
+    <!--</th>-->
+    <!--</tr>-->
+    <!--<tr>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
 
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-        </tr>
-    </table>
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--</tr>-->
+    <!--</table>-->
 
-    <table id="personal" class="col-lg-6" style="width: auto">
-        <tr class="row-sm">
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
+    <!--<table id="personal" class="col-lg-6" style="width: auto">-->
+    <!--<tr class="row-sm">-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
 
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
 
-            </th>
-        </tr>
-        <tr>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
+    <!--</th>-->
+    <!--</tr>-->
+    <!--<tr>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
 
-            </th>
-            <th class="column-sm">
-                <button class="btn btn-sq-sm btn-board">
-                    O
-                </button>
-            </th>
-        </tr>
-    </table>
+    <!--</th>-->
+    <!--<th class="column-sm">-->
+    <!--<button class="btn btn-sq-sm btn-board">-->
+    <!--O-->
+    <!--</button>-->
+    <!--</th>-->
+    <!--</tr>-->
+    <!--</table>-->
 </div>
 
 
-</div>
 </body>
 </html>
