--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
         <div class="col-lg-4"></div>
     </div>
 
-    <div id="footer">All rights reserved to Barak Marziano & Tal Zamir - The Academic of College Tel-Aviv Yaffo</div>
+    <div id="footer">All rights reserved to Barak Marziano & Tal Zamir - The Academic College of Tel-Aviv Yaffo</div>
 </div>
 </body>
 </html>
