--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -54,10 +54,9 @@
                             <div class="row">
                                 <div class="col-xs-4"></div>
                                 <div class="col-xs-4">
-                                    <input type="submit" class="form-control btn btn-primary btn-lg btn-block"
-                                           id="btn-upload"
-                                           value="Upload"
-                                           onclick="uploadFile()"/>
+                                    <button type="button" class="btn btn-secondary btn-lg btn-block" id="btn-upload"
+                                            onclick="uploadFile()">Upload
+                                    </button>
                                 </div>
                                 <div class="col-xs-4"></div>
 
