Rooms list done

--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -43,12 +43,13 @@
     <div class="row">
         <div class="col-lg-12">
             <h2 id="hdl-uploadgame">Upload Your Game</h2>
+            <div id="upload-status"></div>
             <div>
                 <form action="" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div>
                             <input type="text" class="input-group form-control" id="game-title"
-                                   placeholder='Game Title'/>
+                                   placeholder='Room Name'/>
                             <input type="file" class="form-control" name="uploaded-file" id="uploaded-file"
                                    placeholder='Choose a game XML file...'/>
                             <div class="row">
